<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:backgroundTint="@color/gray"
    app:cardCornerRadius="@dimen/dp25"
    tools:context=".ui.fragments.location.detail.LocationDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10">

        <TextView
            android:id="@+id/txt_hint_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/id"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_item_id_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/location_id"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_hint_id" />

        <TextView
            android:id="@+id/txt_hint_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/location_name"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_id_" />

        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:paddingTop="@dimen/dp5"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_hint_name" />

        <TextView
            android:id="@+id/txt_hint_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/dimension"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_name" />

        <TextView
            android:id="@+id/txt_item_dimension"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/dimension"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_hint_dimension" />

        <TextView
            android:id="@+id/txt_created_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/created_2"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_dimension" />

        <TextView
            android:id="@+id/txt_item_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:paddingTop="@dimen/dp5"
            android:text="@string/created_2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_created_hint" />

        <TextView
            android:id="@+id/txt_type_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp15"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/type"
            android:textSize="@dimen/sp18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_item_created" />

        <TextView
            android:id="@+id/txt_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:paddingTop="@dimen/dp5"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_type_hint" />

        <ProgressBar
            android:id="@+id/progress_bar_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>